--- a/package.json
+++ b/package.json
@@ -7,12 +7,25 @@
     "build:client": "npm run build --prefix client",
     "start": "npm start --prefix server",
     "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
-    "install:all": "npm install --prefix server && npm install --prefix client"
+    "install:all": "npm install --prefix server && npm install --prefix client",
+    "vercel-build": "npm run build:client"
   },
-  "keywords": ["figmints", "cmo", "client-meetings", "eos-l10"],
+  "type": "module",
+  "keywords": [
+    "figmints",
+    "cmo",
+    "client-meetings",
+    "eos-l10"
+  ],
   "author": "FIGMINTS Development Team",
   "license": "PRIVATE",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "dependencies": {
+    "better-sqlite3": "^12.6.2",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
+    "helmet": "^8.1.0"
   }
 }
