Fix: Improved Vercel config + deployment guides

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,10 @@
 {
   "version": 2,
+  "outputDirectory": "client/dist",
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "client/dist"
-      }
+      "use": "@vercel/static-build"
     },
     {
       "src": "api/index.js",
