--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "better-sqlite3": "^9.2.2",
-    "helmet": "^7.1.0"
+    "helmet": "^7.1.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-rate-limit": "^7.1.5"
   }
 }
