--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Client Meeting Organizer - Full-stack application for FIGMINTS",
   "scripts": {
-    "build": "npm run build:client",
-    "build:client": "npm run build --prefix client",
+    "build": "npm run install:all && npm run build:client",
+    "build:client": "cd client && npm install && npm run build",
     "start": "npm start --prefix server",
     "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
     "install:all": "npm install --prefix server && npm install --prefix client",
