--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     plan: starter
     region: oregon
-    buildCommand: npm run install:all && npm run build
+    buildCommand: npm run build
     startCommand: npm start
     healthCheckPath: /health
     envVars:
@@ -15,4 +15,6 @@ services:
           type: web
           name: cmo-app
           property: port
+      - key: NPM_CONFIG_PRODUCTION
+        value: false
     autoDeploy: true
