Add Cloudflare Pages deployment configuration
- Add Cloudflare Functions for API routes (auth and main API)
- Add D1 database migration schema
- Configure build process for Cloudflare Pages
- Add routing configuration for static/dynamic content
- Update build scripts for Pages deployment
- Add comprehensive deployment documentation

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,11 @@ dist-ssr/
 build/
 *.local
 
+# Cloudflare Pages build outputs (generated during deployment)
+index.html
+assets/
+!client/dist/
+
 # Environment variables
 .env
 .env.*
