--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Client Meeting Organizer - Full-stack application for FIGMINTS",
   "scripts": {
-    "build": "npm run build:client",
+    "build": "npm run build:cloudflare",
     "build:client": "npm run build --prefix client",
+    "build:cloudflare": "cd client && npm install && npm run build && cd .. && cp -r client/dist/* . && mkdir -p dist && cp _routes.json dist/ || true",
     "start": "npm start --prefix server",
     "dev": "concurrently \"npm run dev --prefix server\" \"npm run dev --prefix client\"",
     "install:all": "npm install --prefix server && npm install --prefix client",
