--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,10 +9,15 @@ name = "cmo-app"
 compatibility_date = "2024-12-01"
 
 # D1 Database binding
+[[d1_databases]]
+binding = "DB"
+database_name = "cmo-app-db"
+database_id = "cefb01d4-74a7-4a99-902c-106aed03d654"
+
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "cmo-app-db"
-database_id = "placeholder-database-id"
+database_id = "cefb01d4-74a7-4a99-902c-106aed03d654"
 
 [env.preview]
 name = "cmo-app-preview"
