--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,11 @@ compatibility_date = "2024-12-01"
 compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = "."
 
+# Build configuration for Cloudflare Pages
+[build]
+command = "npm run build:cloudflare"
+publish = "."
+
 # Pages configuration
 [env.production]
 name = "cmo-app"
